// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alignment: should be able to add alignment to headings 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "end",
          },
          "type": "alignment",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`alignment: should be able to add alignment to paragraphs 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "end",
          },
          "type": "alignment",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`alignment: should be able to add alignment to selected cells 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "align": "end",
                      },
                      "type": "alignment",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "align": "end",
                      },
                      "type": "alignment",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "align": "end",
                      },
                      "type": "alignment",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {},
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`alignment: should maintain alignment when hit return 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this is right",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "end",
          },
          "type": "alignment",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "text": "this is still right",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "end",
          },
          "type": "alignment",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
